[package]
name = "volume_fixer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_System",
    "Win32_System_Com",
    "Win32_Foundation",
    "Media_Audio",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "implement"
]
