[package]
name = "volume_fixer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.2.4"
log = "0.4.17"
env_logger = "0.10.0"
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"

[dependencies.windows]
version = "0.43.0"
features = [
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI",
    "Win32_Devices_Properties",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell",
    "Win32_UI_Input",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_UI",
    "Win32_Foundation",
    "Media_Audio",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "implement",
]
